feat: 添加游戏封面设置功能

--- a/apps/flutter_app/lib/l10n/app_en.arb
+++ b/apps/flutter_app/lib/l10n/app_en.arb
@@ -54,6 +54,10 @@
     }
   },
   "rename": "Rename",
+  "setCover": "Set Cover",
+  "coverFromGallery": "Choose from Gallery",
+  "coverFromCamera": "Take Photo",
+  "coverRemove": "Remove Cover",
 
   "settingsEngine": "Engine",
   "engineMode": "Engine Mode",
