feat: 重构帧率限制功能（通过垂直同步），添加是否限制帧率

--- a/apps/flutter_app/lib/l10n/app_en.arb
+++ b/apps/flutter_app/lib/l10n/app_en.arb
@@ -79,8 +79,11 @@
   "software": "Software",
   "performanceOverlay": "Performance Overlay",
   "performanceOverlayDesc": "Show FPS and graphics API info",
+  "fpsLimitEnabled": "Frame Rate Limit",
+  "fpsLimitEnabledDesc": "Limit engine rendering frequency to save power",
+  "fpsLimitOff": "Off (VSync)",
   "targetFrameRate": "Target Frame Rate",
-  "targetFrameRateDesc": "Limits engine tick rate",
+  "targetFrameRateDesc": "Maximum rendering frequency when limit is enabled",
   "fpsLabel": "{fps} FPS",
   "@fpsLabel": {
     "placeholders": {
