feat: 添加图形后端相关的多语言文本 (中/英/日)
- 新增 graphicsBackend, graphicsBackendHint, opengles, vulkan 翻译
- 更新 arb 文件及自动生成的 localizations 文件

--- a/apps/flutter_app/lib/l10n/app_en.arb
+++ b/apps/flutter_app/lib/l10n/app_en.arb
@@ -77,6 +77,10 @@
   "renderPipelineHint": "Requires restarting the game to take effect",
   "opengl": "OpenGL",
   "software": "Software",
+  "graphicsBackend": "Graphics Backend",
+  "graphicsBackendHint": "ANGLE translation layer backend (Android only). Requires restart.",
+  "opengles": "OpenGL ES",
+  "vulkan": "Vulkan",
   "performanceOverlay": "Performance Overlay",
   "performanceOverlayDesc": "Show FPS and graphics API info",
   "fpsLimitEnabled": "Frame Rate Limit",
