--- a/apps/flutter_app/lib/l10n/app_ja.arb
+++ b/apps/flutter_app/lib/l10n/app_ja.arb
@@ -62,6 +62,10 @@
   "renderPipelineHint": "ゲームの再起動後に有効になります",
   "opengl": "OpenGL",
   "software": "ソフトウェア",
+  "graphicsBackend": "グラフィックスバックエンド",
+  "graphicsBackendHint": "ANGLE翻訳レイヤーバックエンド（Androidのみ）。再起動が必要です。",
+  "opengles": "OpenGL ES",
+  "vulkan": "Vulkan",
   "performanceOverlay": "パフォーマンスオーバーレイ",
   "performanceOverlayDesc": "FPSとグラフィックAPI情報を表示",
   "fpsLimitEnabled": "フレームレート制限",
