--- a/apps/flutter_app/lib/l10n/app_zh.arb
+++ b/apps/flutter_app/lib/l10n/app_zh.arb
@@ -62,6 +62,10 @@
   "renderPipelineHint": "需要重启游戏后生效",
   "opengl": "OpenGL",
   "software": "软件渲染",
+  "graphicsBackend": "图形后端",
+  "graphicsBackendHint": "ANGLE 翻译层后端（仅 Android）。需重启生效。",
+  "opengles": "OpenGL ES",
+  "vulkan": "Vulkan",
   "performanceOverlay": "性能监控",
   "performanceOverlayDesc": "显示帧率和图形 API 信息",
   "fpsLimitEnabled": "帧率限制",
