feat: 新增XP3压缩包支持

--- a/apps/flutter_app/lib/l10n/app_en.arb
+++ b/apps/flutter_app/lib/l10n/app_en.arb
@@ -119,6 +119,8 @@
   "resume": "Resume",
   "exitGame": "Exit Game",
   "selectGameDirectory": "Select Game Directory",
+  "selectGameArchive": "Select XP3 Archive",
+  "addArchive": "Add XP3",
 
   "justNow": "just now",
   "minutesAgo": "{count} min ago",
