feat: 添加关于页面作者邮箱及版本说明

--- a/apps/flutter_app/lib/l10n/app_en.arb
+++ b/apps/flutter_app/lib/l10n/app_en.arb
@@ -108,6 +108,10 @@
 
   "settingsAbout": "About",
   "version": "Version",
+  "aboutVersionDesc": "Iterative testing, not for long-term use",
+  "aboutAuthor": "Author",
+  "aboutEmail": "Email",
+  "aboutEmailCopied": "Email copied to clipboard",
 
   "gameEngineError": "Engine Error",
   "unknownError": "Unknown error",
