--- a/apps/flutter_app/lib/l10n/app_ja.arb
+++ b/apps/flutter_app/lib/l10n/app_ja.arb
@@ -88,6 +88,10 @@
 
   "settingsAbout": "バージョン情報",
   "version": "バージョン",
+  "aboutVersionDesc": "反復テスト中、長期使用はご遠慮ください",
+  "aboutAuthor": "作者",
+  "aboutEmail": "メール",
+  "aboutEmailCopied": "メールアドレスをコピーしました",
 
   "gameEngineError": "エンジンエラー",
   "unknownError": "不明なエラー",
